# vulkan-voxel-optimizations

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  World.cpp  World.h
src/game/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  World.cpp  World.h
src/input/: InputHandler.h
src/rendering/: Camera.cpp  Camera.h  ChunkRenderer.cpp  ChunkRenderer.h  CoreRenderer.cpp  CoreRenderer.h  GameRenderer.cpp  GameRenderer.h  MainRenderer.cpp  MainRenderer.h  RendererHelper.cpp  RendererHelper.h  SwapChain.cpp  SwapChain.h  TextRenderer.cpp  TextRenderer.h  TimeManager.cpp  TimeManager.h  Vertex.cpp  Vertex.h  VertexPool.cpp  VertexPool.h  VulkanBufferUtil.cpp  VulkanBufferUtil.h  VulkanDebugger.cpp  VulkanDebugger.h  VulkanStructs.h  VulkanUtil.cpp  VulkanUtil.h  WorldGeometry.cpp  WorldGeometry.h  camera.cpp  main.cpp  vertex.cpp  vertex.h
src/rendering/camera/: Camera.cpp  Camera.h
src/rendering/misc/: Camera.cpp  Camera.h  Vertex.cpp  Vertex.h  VertexPool.cpp  VertexPool.h
src/rendering/scene/: Camera.cpp  Camera.h  Vertex.cpp  VertexPool.cpp  VertexPool.h
src/rendering/shaders/: compile.bat  frag.spv  shader.frag  shader.vert  text_frag.spv  text_shader.frag  text_shader.vert  text_vert.spv  vert.spv
src/rendering/vulkan/: SwapChain.cpp  SwapChain.h  VulkanBufferUtil.cpp  VulkanBufferUtil.h  VulkanDebugger.cpp  VulkanStructs.h  VulkanUtil.cpp  VulkanUtil.h
src/util/: GraphicsUtil.cpp  GraphicsUtil.h  InputHandler.cpp  InputManager.cpp  InputManager.h  TimeManager.cpp  TimeManager.h  VertexUtil.cpp  VertexUtil.h
src/utility/: GraphicsUtil.cpp  GraphicsUtil.h  InputHandler.cpp  InputHandler.h  TextUtil.cpp  TextUtil.h  TimeManager.cpp  TimeManager.h
